--- a/styles/dice.sass
+++ b/styles/dice.sass
@@ -1,7 +1,7 @@
 
 @import "_variables.sass"
 
-	
+
 .icon
 	// use !important to prevent issues with browser extensions that change fonts
 	font-family: 'sw-rpg-icons' !important
@@ -141,9 +141,9 @@
 		content: $ffi-swrpg-despair
 
 
-@font-face 
+@font-face
 	font-family: 'sw-rpg-icons'
-	src: url(../fonts/sw-rpg-icons.eot?32jxyw)
-	src: url(../fonts/sw-rpg-icons.eot?32jxyw#iefix) format('embedded-opentype'), url(../fonts/sw-rpg-icons.ttf?32jxyw) format('truetype'), url(../fonts/sw-rpg-icons.woff?32jxyw) format('woff'), url(../fonts/sw-rpg-icons.svg?32jxyw#sw-rpg-icons) format('svg')
+	src: url(/fonts/sw-rpg-icons.eot?32jxyw)
+	src: url(/fonts/sw-rpg-icons.eot?32jxyw#iefix) format('embedded-opentype'), url(/fonts/sw-rpg-icons.ttf?32jxyw) format('truetype'), url(/fonts/sw-rpg-icons.woff?32jxyw) format('woff'), url(/fonts/sw-rpg-icons.svg?32jxyw#sw-rpg-icons) format('svg')
 	font-weight: normal
 	font-style: normal
